--- a/public/keypad.css
+++ b/public/keypad.css
@@ -60,10 +60,10 @@
 
         }    
 
-        .popupContent {
+        /* .popupContent {
             padding-top: 4rem;
             text-align: center;
-        }
+        } */
 
         .keypadArea {
             width: 35rem;
