--- a/view/keypadFrame.ejs
+++ b/view/keypadFrame.ejs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="keypad.css">
 <section id="keypadFrame" class="keypadArea">
     <p class="bookingNumberText">
         <%= title %>
@@ -99,9 +100,3 @@
     const keypad = new Keypad("keypad");
     keypad.runKeypad();
 </script>
-
-<style>
-    button:disabled {
-        background-color: #343434;
-    }
-</style>
