--- a/view/html/select_movie_time_popup.html
+++ b/view/html/select_movie_time_popup.html
@@ -230,6 +230,7 @@
                             <p id="mvTime" class="mvTime"></p>
                         </div>
                         <button id="timeSelectionCompleteBtn" class="timeSelectionBtn disalbledBtn">선택 완료</button>
+                    </div>
                 </section>
             </section>
         </section>
