--- a/view/popup_select_movie_time.ejs
+++ b/view/popup_select_movie_time.ejs
@@ -1,3 +1,163 @@
+<article class="popupBar">
+    <p class="popupTitle popupBarTextCommon">영화 시간을 선택해주세요.</p>
+    <div id="closePopup"><i class="popupBarTextCommon fa-solid fa-x"></i></div>
+</article>
+<section class="popupContent">
+    <!-- ~여기에 작성~ -->
+
+    <!-- 시간선택팝업 -->
+    <div class="timePopupAll">
+        <div class="posterBasicInformation">
+
+            <div id="posterImg" class="posterImg"></div>
+            <ul class="allMvTime" id="allMvTime">
+                <!-- 1 -->
+                <li class="mvTimeList" id="list01">
+                    <p class="theather">A관</p>
+                    <p class="startAndEndTime">11시00분</p>
+                    <p class="startAndEndTime">~12시00분</p>
+                </li>
+                <!-- 2 -->
+                <li class="mvTimeList" id="list02">
+                    <p class="theather">A관</p>
+                    <p class="startAndEndTime">12시00분</p>
+                    <p class="startAndEndTime">~13시00분</p>
+                </li>
+                <!-- 3 -->
+                <li class="mvTimeList" id="list03">
+                    <p class="theather">A관</p>
+                    <p class="startAndEndTime">13시00분</p>
+                    <p class="startAndEndTime">~14시00분</p>
+                </li>
+                <!-- 4 -->
+                <li class="mvTimeList" id="list04">
+                    <p class="theather">A관</p>
+                    <p class="startAndEndTime">14시00분</p>
+                    <p class="startAndEndTime">~15시00분</p>
+                </li>
+                <!-- 5 -->
+                <li class="mvTimeList" id="list05">
+                    <p class="theather">A관</p>
+                    <p class="startAndEndTime">15시00분</p>
+                    <p class="startAndEndTime">~16시00분</p>
+                </li>
+                <!-- 6 -->
+                <li class="mvTimeList" id="list06">
+                    <p class="theather">A관</p>
+                    <p class="startAndEndTime">16시00분</p>
+                    <p class="startAndEndTime">~17시00분</p>
+                </li>
+                <!-- 7 -->
+                <li class="mvTimeList" id="list07">
+                    <p class="theather">A관</p>
+                    <p class="startAndEndTime">17시00분</p>
+                    <p class="startAndEndTime">~18시00분</p>
+                </li>
+            </ul>
+        </div>
+        <div class="posterInformation">
+            <p id="mvName" class="mvName">영화명</p>
+            <p id="mvTime" class="mvTime"></p>
+        </div>
+        <button id="timeSelectionCompleteBtn" class="timeSelectionBtn disalbledBtn">선택 완료</button>
+    </div>
+</section>
+
+<!-- ==script== -->
+<script>
+    //const mvTime = document.getElementById("mvTime");
+
+    const movieData = {
+        theater: "",
+        startTime: "",
+        endTime: "",
+    };
+
+    const movieTimeData = [
+        { "movie_id": 1, "duration": "01:50", "title": "플립", showtime: '11:00', theater: 'A관', img_path: 'images/플립.png' },
+        { "movie_id": 1, "duration": "01:50", "title": "플립", showtime: '12:00', theater: 'B관', img_path: 'images/플립.png' },
+        { "movie_id": 1, "duration": "01:50", "title": "플립", showtime: '13:00', theater: 'C관', img_path: 'images/플립.png' },
+        { "movie_id": 1, "duration": "01:50", "title": "플립", showtime: '14:00', theater: 'D관', img_path: 'images/플립.png' },
+        { "movie_id": 1, "duration": "01:50", "title": "플립", showtime: '15:00', theater: 'A관', img_path: 'images/플립.png' }
+    ];
+    const movieDataObj = {
+    };
+
+    movieTimeData.forEach((movie) => {
+        if ("slot" in movieDataObj) {
+            movieDataObj["slot"].push({
+                "theater": movie["theater"],
+                "showtime": movie["showtime"]
+            });
+        } else {
+            movieDataObj["movie_id"] = movie["movie_id"];
+            movieDataObj["title"] = movie["title"];
+            movieDataObj["duration"] = movie["duration"];
+            movieDataObj["poster"] = movie["title"]; //movie["img_path"];
+            movieDataObj["slot"] = [{
+                "theater": movie["theater"],
+                "showtime": movie["showtime"]
+            }];
+        }
+    });
+    console.log(movieDataObj);
+    const allMvTime = document.getElementById("allMvTime");
+    const posterImg = document.getElementById("posterImg");
+    const mvName = document.getElementById("mvName");
+    const mvTime = document.getElementById("mvTime");
+    
+    posterImg.innerHTML = movieDataObj["poster"];
+    mvName.innerText = movieDataObj["title"];
+    mvTime.innerText = movieDataObj["duration"];
+    allMvTime.innerHTML = "";
+    //let movieTimeList = "";
+    movieDataObj["slot"].forEach( ( slot, index ) => {
+        allMvTime.innerHTML += `
+            <li class="mvTimeList" id="list0${index+1}">
+                <p class="theater">${slot["theater"]}</p>
+                <p class="startAndEndTime">${slot["showtime"]}</p>
+                <p class="startAndEndTime">~12시00분</p>
+            </li>
+        `;
+    });
+
+    const mvTimeList = document.querySelectorAll(".mvTimeList");
+    const timeSelectionBtn = document.getElementById("timeSelectionCompleteBtn");
+
+    function objectToQueryString(obj) {
+        return Object.keys(obj)
+            .map(key => { return `${key}=${obj[key]}` })
+            .join('&');
+    }
+
+    movieData.name = document.getElementById("mvName").innerHTML;
+
+    mvTimeList.forEach((item) => {
+        // click event : 클릭된 item -> movieData 값 할당 //
+        item.addEventListener("click", (event) => {
+            const paragraphs = event.target.getElementsByTagName("p");
+            movieData.theater = paragraphs[0].innerHTML;
+            movieData.startTime = paragraphs[1].innerHTML;
+            movieData.endTime = paragraphs[2].innerHTML.slice(1);
+            console.log(movieData);
+
+            // 라디오 버튼 처럼 기능 구현 //
+            mvTimeList.forEach((listItem) => {
+                listItem.classList.remove("activeMvTime");
+            });
+            item.classList.add("activeMvTime");
+            timeSelectionBtn.classList.remove("disalbledBtn");
+        });
+    });
+
+    // 클릭시 query+페이지 이동 //
+    timeSelectionBtn.addEventListener("click", (event) => {
+        const query = objectToQueryString(movieData);
+        location.href = `/select_headcount?${query}`;
+    });
+
+</script>
+
 <style>
     /* 시간선택팝업 */
     .posterBasicInformation {
@@ -136,157 +296,3 @@
         pointer-events: none;
     }
 </style>
-
-
-<article class="popupBar">
-    <p class="popupTitle popupBarTextCommon">영화 시간을 선택해주세요.</p>
-    <div id="closePopup"><i class="popupBarTextCommon fa-solid fa-x"></i></div>
-</article>
-<section class="popupContent">
-    <!-- ~여기에 작성~ -->
-
-    <!-- 시간선택팝업 -->
-    <div class="timePopupAll">
-        <div class="posterBasicInformation">
-
-            <div id="posterImg" class="posterImg"></div>
-            <ul class="allMvTime" id="allMvTime">
-                <!-- 1 -->
-                <li class="mvTimeList" id="list01">
-                    <p class="theather">A관</p>
-                    <p class="startAndEndTime">11시00분</p>
-                    <p class="startAndEndTime">~12시00분</p>
-                </li>
-                <!-- 2 -->
-                <li class="mvTimeList" id="list02">
-                    <p class="theather">A관</p>
-                    <p class="startAndEndTime">12시00분</p>
-                    <p class="startAndEndTime">~13시00분</p>
-                </li>
-                <!-- 3 -->
-                <li class="mvTimeList" id="list03">
-                    <p class="theather">A관</p>
-                    <p class="startAndEndTime">13시00분</p>
-                    <p class="startAndEndTime">~14시00분</p>
-                </li>
-                <!-- 4 -->
-                <li class="mvTimeList" id="list04">
-                    <p class="theather">A관</p>
-                    <p class="startAndEndTime">14시00분</p>
-                    <p class="startAndEndTime">~15시00분</p>
-                </li>
-                <!-- 5 -->
-                <li class="mvTimeList" id="list05">
-                    <p class="theather">A관</p>
-                    <p class="startAndEndTime">15시00분</p>
-                    <p class="startAndEndTime">~16시00분</p>
-                </li>
-                <!-- 6 -->
-                <li class="mvTimeList" id="list06">
-                    <p class="theather">A관</p>
-                    <p class="startAndEndTime">16시00분</p>
-                    <p class="startAndEndTime">~17시00분</p>
-                </li>
-                <!-- 7 -->
-                <li class="mvTimeList" id="list07">
-                    <p class="theather">A관</p>
-                    <p class="startAndEndTime">17시00분</p>
-                    <p class="startAndEndTime">~18시00분</p>
-                </li>
-            </ul>
-        </div>
-        <div class="posterInformation">
-            <p id="mvName" class="mvName">영화명</p>
-            <p id="mvTime" class="mvTime"></p>
-        </div>
-        <button id="timeSelectionCompleteBtn" class="timeSelectionBtn disalbledBtn">선택 완료</button>
-    </div>
-</section>
-
-<!-- ==script== -->
-<script>
-    const mvTimeList = document.querySelectorAll(".mvTimeList");
-    const timeSelectionBtn = document.getElementById("timeSelectionCompleteBtn");
-    //const mvTime = document.getElementById("mvTime");
-
-    const movieData = [
-        { "movie_id": 1, "duration": "01:50", "title": "플립", showtime: '11:00', theather: 'A관', img_path: 'images/플립.png' },
-        { "movie_id": 1, "duration": "01:50", "title": "플립", showtime: '12:00', theather: 'B관', img_path: 'images/플립.png' },
-        { "movie_id": 1, "duration": "01:50", "title": "플립", showtime: '13:00', theather: 'C관', img_path: 'images/플립.png' },
-        { "movie_id": 1, "duration": "01:50", "title": "플립", showtime: '14:00', theather: 'D관', img_path: 'images/플립.png' },
-        { "movie_id": 1, "duration": "01:50", "title": "플립", showtime: '15:00', theather: 'A관', img_path: 'images/플립.png' }
-    ];
-    const movieDataObj = {};
-
-    movieData.forEach((movie) => {
-        if ("slot" in movieDataObj) {
-            movieDataObj["slot"].push({
-                "theather": movie["theather"],
-                "showtime": movie["showtime"]
-            });
-        } else {
-            movieDataObj["movie_id"] = movie["movie_id"];
-            movieDataObj["title"] = movie["title"];
-            movieDataObj["duration"] = movie["duration"];
-            movieDataObj["poster"] = movie["title"]; //movie["img_path"];
-            movieDataObj["slot"] = [{
-                "theather": movie["theather"],
-                "showtime": movie["showtime"]
-            }];
-        }
-    });
-    console.log(movieDataObj);
-    const allMvTime = document.getElementById("allMvTime");
-    const posterImg = document.getElementById("posterImg");
-    const mvName = document.getElementById("mvName");
-    const mvTime = document.getElementById("mvTime");
-    
-    posterImg.innerHTML = movieDataObj["poster"];
-    mvName.innerText = movieDataObj["title"];
-    mvTime.innerText = movieDataObj["duration"];
-    allMvTime.innerHTML = "";
-    //let movieTimeList = "";
-    movieDataObj["slot"].forEach( ( slot, index ) => {
-        allMvTime.innerHTML += `
-            <li class="mvTimeList" id="list01">
-                <p class="theather">${slot["theather"]}</p>
-                <p class="startAndEndTime">${slot["showtime"]}</p>
-                <p class="startAndEndTime">~12시00분</p>
-            </li>
-        `;
-    });
-
-    function objectToQueryString(obj) {
-        return Object.keys(obj)
-            .map(key => { return `${key}=${obj[key]}` })
-            .join('&');
-    }
-
-    movieData.name = document.getElementById("mvName").innerHTML;
-
-    mvTimeList.forEach((item) => {
-        // click event : 클릭된 item -> movieData 값 할당 //
-        item.addEventListener("click", (event) => {
-            const paragraphs = event.target.getElementsByTagName("p");
-            movieData.theater = paragraphs[0].innerHTML;
-            movieData.startTime = paragraphs[1].innerHTML;
-            movieData.endTime = paragraphs[2].innerHTML.slice(1);
-            mvTime.innerHTML = movieData.startTime;
-            console.log(movieData);
-
-            // 라디오 버튼 처럼 기능 구현 //
-            mvTimeList.forEach((listItem) => {
-                listItem.classList.remove("activeMvTime");
-            });
-            item.classList.add("activeMvTime");
-            timeSelectionBtn.classList.remove("disalbledBtn");
-        });
-    });
-
-    // 클릭시 query+페이지 이동 //
-    timeSelectionBtn.addEventListener("click", (event) => {
-        const query = objectToQueryString(movieData);
-        location.href = `/select_headcount?${query}`;
-    });
-
-</script>
